crates/solite-core/src/snapshots/solite_core__tests__core_basic-2.snap
---
source: crates/solite-core/src/lib.rs
expression: modules_of(&runtime.connection)
snapshot_kind: text
---
- bytecode
- completion
- csv
- csv_fields
- csv_reader
- csv_rows
- dbstat
- fsdir
- fts5
- fts5vocab
- generate_series
- geopoly
- pragma_function_list
- pragma_module_list
- regex_captures
- regex_find_all
- regex_split
- regexset_matches
- rtree
- rtree_i32
- spellfix1
- sqlite_dbpage
- sqlite_stmt
- str_bytes
- str_chars
- str_lines
- tables_used
- tsv
- tsv_fields
- tsv_reader
- tsv_rows
- vec0
- vec_each
- xsv
- xsv_fields
- xsv_reader
- xsv_rows
- zipfile
