crates/solite-core/src/snapshots/solite_core__tests__core_basic-3.snap
---
source: crates/solite-core/src/lib.rs
expression: version_functions_of(&runtime.connection)
snapshot_kind: text
---
- http_version == v0.1.0
- path_version == xv0.1.0
- regex_version == v0.2.4-alpha.1
- solite_stdlib_version == v0.0.1-alpha.1
- sqlite_version == 3.53.0
- str_version == v0.0.1-alpha.1
- ulid_version == v0.2.2-alpha.1
- url_version == xv0.1.0
- vec_version == v0.1.6
- xsv_version == v0.2.1-alpha.11
