crates/solite-core/src/snapshots/solite_core__tests__core_basic.snap
---
source: crates/solite-core/src/lib.rs
expression: functions_of(&runtime.connection)
snapshot_kind: text
---
- "->"
- "->>"
- abs
- acos
- acosh
- asin
- asinh
- atan
- atan2
- atanh
- avg
- base64
- bm25
- ceil
- ceiling
- changes
- char
- clipboard_set
- coalesce
- compress
- concat
- concat_ws
- cos
- cosh
- count
- csv_at
- csv_line_number
- csv_path
- cume_dist
- current_date
- current_time
- current_timestamp
- date
- datetime
- decimal
- decimal_add
- decimal_cmp
- decimal_exp
- decimal_mul
- decimal_pow2
- decimal_sub
- decimal_sum
- degrees
- dense_rank
- editdist3
- exp
- first_value
- floor
- format
- fts5
- fts5_get_locale
- fts5_insttoken
- fts5_locale
- fts5_source_id
- geopoly_area
- geopoly_bbox
- geopoly_blob
- geopoly_ccw
- geopoly_contains_point
- geopoly_debug
- geopoly_group_bbox
- geopoly_json
- geopoly_overlap
- geopoly_regular
- geopoly_svg
- geopoly_within
- geopoly_xform
- glob
- group_concat
- hex
- highlight
- http_debug
- http_get_body
- http_request
- http_version
- ieee754
- ieee754_exponent
- ieee754_from_blob
- ieee754_from_int
- ieee754_inc
- ieee754_mantissa
- ieee754_to_blob
- ieee754_to_int
- if
- ifnull
- iif
- instr
- json
- json_array
- json_array_insert
- json_array_length
- json_error_position
- json_extract
- json_group_array
- json_group_object
- json_insert
- json_object
- json_patch
- json_pretty
- json_quote
- json_remove
- json_replace
- json_set
- json_type
- json_valid
- jsonb
- jsonb_array
- jsonb_array_insert
- jsonb_extract
- jsonb_group_array
- jsonb_group_object
- jsonb_insert
- jsonb_object
- jsonb_patch
- jsonb_remove
- jsonb_replace
- jsonb_set
- julianday
- lag
- last_insert_rowid
- last_value
- lead
- length
- like
- likelihood
- likely
- ln
- load_extension
- log
- log10
- log2
- lower
- lsmode
- ltrim
- match
- max
- min
- mod
- nth_value
- ntile
- nullif
- octet_length
- path_at
- path_debug
- path_version
- percent_rank
- pi
- pow
- power
- printf
- quote
- radians
- random
- randomblob
- rank
- readfile
- realpath
- regex
- regex_capture
- regex_debug
- regex_find
- regex_find_at
- regex_print
- regex_replace
- regex_replace_all
- regex_valid
- regex_version
- regexp
- regexset
- regexset_is_match
- regexset_print
- replace
- round
- row_number
- rtreecheck
- rtreedepth
- rtreenode
- rtrim
- sha1
- sha1_query
- sha1b
- sha3
- sha3_agg
- sha3_query
- sign
- sin
- sinh
- snippet
- solite_stdlib_version
- soundex
- spellfix1_editdist
- spellfix1_phonehash
- spellfix1_scriptcode
- spellfix1_translit
- sqlar_compress
- sqlar_uncompress
- sqlite_compileoption_get
- sqlite_compileoption_used
- sqlite_log
- sqlite_source_id
- sqlite_version
- sqrt
- str_contains
- str_lower
- str_lower_ascii
- str_replace
- str_upper
- str_upper_ascii
- str_version
- strftime
- string_agg
- substr
- substring
- subtype
- sum
- tan
- tanh
- time
- timediff
- total
- total_changes
- trim
- trunc
- tsv_at
- tsv_line_number
- tsv_path
- typeof
- ulid
- ulid_bytes
- ulid_datetime
- ulid_debug
- ulid_version
- ulid_with_datetime
- ulid_with_prefix
- uncompress
- unhex
- unicode
- unistr
- unistr_quote
- unixepoch
- unlikely
- upper
- url_debug
- url_escape
- url_fragment
- url_host
- url_path
- url_port
- url_query
- url_scheme
- url_valid
- url_version
- usleep
- uuid
- uuid_blob
- uuid_str
- vec_add
- vec_bit
- vec_debug
- vec_distance_cosine
- vec_distance_hamming
- vec_distance_l1
- vec_distance_l2
- vec_f32
- vec_int8
- vec_length
- vec_normalize
- vec_quantize_binary
- vec_quantize_int8
- vec_slice
- vec_sub
- vec_to_json
- vec_type
- vec_version
- writefile
- xsv_at
- xsv_debug
- xsv_line_number
- xsv_path
- xsv_version
- zeroblob
- zipfile
- zipfile_cds
