crates/solite-core/src/snapshots/solite_core__tests__snap.snap
---
source: solite-core/src/lib.rs
expression: step
snapshot_kind: text
---
Ok:
  preamble: ~
  result:
    SqlStatement:
      stmt: {}
      raw_sql: "create table t(a);\n                -- yabble yabble\n                insert into t select 1;\n                insert into t select 2; "
  reference:
    block_name: "[input]"
    line_number: 1
    column_number: 1
    region: []
