crates/solite-core/src/snapshots/solite_core__tests__sqlite_version.snap
---
source: crates/solite-core/src/lib.rs
expression: stmt.next().unwrap().unwrap().first().unwrap().as_str()
snapshot_kind: text
---
3.53.2
