crates/solite-core/src/snapshots/solite_core__tests__step-0.snap
---
source: crates/solite-core/src/lib.rs
expression: step
snapshot_kind: text
---
Ok:
  preamble: "\n-- preamble1\n"
  epilogue: ~
  result:
    SqlStatement:
      stmt: {}
      raw_sql: select 1;
  reference:
    block_name: "[input]"
    line_number: 3
    column_number: 1
    region: []
