crates/solite-core/src/snapshots/solite_core__tests__step-3.snap
---
source: crates/solite-core/src/lib.rs
expression: step
snapshot_kind: text
---
Ok:
  preamble: ~
  epilogue: ~
  result:
    SqlStatement:
      stmt: {}
      raw_sql: select 3.2;
  reference:
    block_name: "[input]"
    line_number: 6
    column_number: 12
    region: []
